# huub

./: .gitattributes  Cargo.toml  LICENSE  README.md  clippy.toml  huub.msc
.github/: dependabot.yml
.github/workflows/: build-test.yml  format.yml  release.yml  test.yml
crates/fzn-huub/: Cargo.toml
crates/fzn-huub/benches/: fzn_huub_benchmarks.rs
crates/fzn-huub/corpus/: README.md  amaze3_2012_03_19.fzn.json  amaze3_2012_03_19.sol  array_var_int_element.fzn.json  array_var_int_element.sol  bool_indomain_max.fzn.json  bool_indomain_max.mzn  bool_indomain_min.fzn.json  bool_indomain_min.mzn  int_indomain_max_1.fzn.json  int_indomain_max_1.mzn  int_indomain_max_1.sol  int_indomain_max_2.fzn.json  int_indomain_max_2.mzn  int_indomain_max_2.sol  int_indomain_max_3.fzn.json  int_indomain_max_3.mzn  int_indomain_max_3.sol  int_indomain_max_4.fzn.json  int_indomain_max_4.mzn  int_indomain_max_4.sol  int_indomain_max_5.fzn.json  int_indomain_max_5.mzn  int_indomain_max_5.sol  int_indomain_min_1.fzn.json  int_indomain_min_1.mzn  int_indomain_min_1.sol  int_indomain_min_2.fzn.json  int_indomain_min_2.mzn  int_indomain_min_2.sol  int_indomain_min_3.fzn.json  int_indomain_min_3.mzn  int_indomain_min_3.sol  int_indomain_min_4.fzn.json  int_indomain_min_4.mzn  int_indomain_min_4.sol  int_indomain_min_5.fzn.json  int_indomain_min_5.mzn  int_indomain_min_5.sol  int_lin_eq_prop.fzn.json  (+70 more)
crates/fzn-huub/src/: lib.rs  main.rs  trace.rs  tracing.rs
crates/fzn-huub/tests/: flatzinc_tests.rs
crates/fzn-huub/tests/helpers/: mod.rs
crates/huub/: Cargo.toml
crates/huub/src/: actions.rs  brancher.rs  helpers.rs  lib.rs  model.rs  propagator.rs  solver.rs  tests.rs
crates/huub/src/actions/: decision.rs  explanation.rs  initialization.rs  inspection.rs  propagation.rs  trailing.rs
crates/huub/src/helpers/: linear_transform.rs  range_list.rs  static_option.rs
crates/huub/src/model/: bool.rs  branching.rs  constraint.rs  flatzinc.rs  int.rs  reformulate.rs
crates/huub/src/propagator/: all_different.rs  all_different_int.rs  array_int_element.rs  array_int_minimum.rs  array_var_int_element.rs  conflict.rs  disjunctive.rs  disjunctive_stict.rs  disjunctive_strict.rs  element.rs  init_action.rs  int_abs.rs  int_div.rs  int_event.rs  int_lin_le.rs  int_lin_ne.rs  int_pow.rs  int_times.rs  linear.rs  minimum.rs  propagation_action.rs  reason.rs
crates/huub/src/solver/: engine.rs  initialization_context.rs  poster.rs  propagation_layer.rs  value.rs  view.rs
crates/huub/src/solver/engine/: activation_list.rs  bool_to_int.rs  int_var.rs  propagation_context.rs  queue.rs  solving_context.rs  trail.rs
share/minizinc/huub/: fzn_all_different_int.mzn  fzn_disjunctive_strict.mzn  redefinitions-2.0.mzn  redefinitions.mzn
share/minizinc/solvers/: huub.msc
