[package]
name = "fzn-huub"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.4"
flatzinc-serde = "0.3"
humantime = "2.1.0"
huub = { path = "../huub" }
miette = { version = "7.2.0", features = ["fancy"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ustr = { version = "1.0", features = ["serde"] }

[lints]
workspace = true
