[package]
name = "fzn-huub"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
ctrlc = "3.4.4"
flatzinc-serde = { git = "https://github.com/shackle-rs/shackle/" }
humantime = "2.1.0"
huub = { path = "../huub" }
pico-args = { version = "0.5.0", features = ["combined-flags"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ustr = { version = "1.0", features = ["serde"] }

[lints]
workspace = true
