[package]
name = "fzn-huub"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[[bench]]
name = "fzn_huub_benchmarks"
harness = false

[dependencies]
ctrlc = "3.4.4"
flatzinc-serde = { workspace = true }
humantime = "2.1.0"
huub = { path = "../huub" }
pico-args = { version = "0.5.0", features = ["combined-flags"] }
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
ustr = { version = "1.0", features = ["serde"] }

[dev-dependencies]
codspeed-criterion-compat = "2.6"
expect-test = { workspace = true }

[lints]
workspace = true
