[package]
name = "huub"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
delegate = "0.12"
flatzinc-serde = "0.3"
index_vec = "0.1.3"
itertools = "0.13.0"
pindakaas = { git = "https://github.com/pindakaashq/pindakaas.git", features = [
  "ipasir-up",
] }
thiserror = "1.0.63"
tracing = "0.1.40"

[dev-dependencies]
expect-test = "1.5.0"

[lints]
workspace = true
