[package]
name = "huub"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
delegate = "0.12"
flatzinc-serde = { workspace = true }
index_vec = "0.1.3"
itertools = "0.13.0"
pindakaas = { git = "https://github.com/pindakaashq/pindakaas.git", features = [
	"ipasir-up",
] }
rangelist = { git = "https://github.com/shackle-rs/shackle/" }
thiserror = "1.0.63"
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
tracing-test = "0.2.5"

[lints]
workspace = true
